# django-docker-example

./: Dockerfile  docker-compose.yml  pyproject.toml
src/examplesite/: settings.py  urls.py
src/examplesite/views/: about.py  index.py
src/polls/: admin.py  models.py  views.py
src/polls/migrations/: 0001_initial.py
