[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
sources = ["src"]

[project]
name = "examplesite"
version = "0.0.1"
authors = [
    {name = "Zachary Wilson", email = "wilsonzachary634@gmail.com"},
]
description = "Example django site."
readme = "README.md"
requires-python = ">=3.12"